<?xml version="1.0"?>
<package format="3">
  <name>object_counter</name>
  <version>0.0.0</version>
  <description>Object counter using Arduino and ROS 2</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
